<resources>
    <string name="app_name">录音机</string>
    <string name="start_recording">开始录音</string>
    <string name="play_record">播放录音</string>
    <string name="save_record">保存录音</string>
    <string name="list_record">录音列表</string>
    <string name="end_recording">结束录音</string>
    <string name="pause_record">暂停播放</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="input_title">输入标题</string>
    <string name="no_content">暂无</string>
    <string name="page_last">上一页</string>
    <string name="page_next">下一页</string>

    <string name="permission_apply">权限申请</string>
    <string name="permission_successfully">获取成功的权限</string>
    <string name="permission_denied">已拒绝权限</string>
    <string name="permission_ask_no_more">不再询问</string>
    <string name="permission_this_function_requires">此功能需要</string>
    <string name="permission_unusable">权限，否则无法正常使用，是否打开设置</string>

</resources>