<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="38dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@drawable/bg_cricle_black"
        >

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="00:00"
            android:textSize="50sp"
            android:textColor="@color/black"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/tv_recorder"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:background="@drawable/click_btn_line_black_5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/start_recording"
            android:gravity="center"
            />

        <View
            android:layout_width="30dp"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_mediaplayer"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:background="@drawable/click_btn_line_black_5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/play_record"
            android:gravity="center"
            />
        <View
            android:layout_width="30dp"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tv_save"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:background="@drawable/click_btn_line_black_5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/save_record"
            android:gravity="center"
            />
        <View
            android:layout_width="30dp"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tv_list"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:background="@drawable/click_btn_line_black_5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/list_record"
            android:gravity="center"
            />

    </LinearLayout>

</RelativeLayout>