<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="450dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:padding="40dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textColorHint="#666666"
        android:background="@drawable/bg_line_bottom"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:hint="@string/input_title"
        android:textColor="@color/black"
        android:lines="1"
        android:ellipsize="end"
        android:padding="5dp"
        android:layout_marginBottom="35dp"
        />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/click_btn_line_black_5dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:background="@drawable/click_btn_line_black_5dp"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>